# school_management_system

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260628_0001_initial_schema.py  20260628_0002_add_indexes.py  20260628_0003_admissions_management_fields.py  20260628_0004_admissions_workflow_audit.py  20260629_0005_add_admissions_fee_fields.py  20260629_0006_add_admissions_gender.py  20260629_0007_phase1_management_academics_fees.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admissions.py  announcements.py  assignments.py  auth.py  crud_factory.py  dashboard.py  events.py  exam_results.py  exam_sessions.py  exam_subjects.py  fee_payments.py  fee_structures.py  files.py  gallery.py  grades.py  health.py  parents.py  student_fee_ledgers.py  student_parents.py  students.py  subjects.py  submissions.py  teachers.py  users.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  admission.py  announcement.py  assignment.py  enums.py  event.py  exam_result.py  exam_session.py  exam_subject.py  fee_payment.py  fee_structure.py  gallery.py  grade.py  parent.py  student.py  student_fee_ledger.py  student_parent.py  subject.py  submission.py  teacher.py  user.py
backend/app/repositories/: admissions_repository.py  announcements_repository.py  assignments_repository.py  base.py  (+15 more)
backend/scripts/: seed_dev_data.py
(+116 files in other folders)
